# byol_project

./: Makefile  README.md  pyproject.toml  requirements.txt  test.py
byol/: config.py  dataset.py
byol/modeling/: fine-tuning.py  fine_tune.py  model.py  pre_train.py  predict.py  test.py  train.py
models/: fine-tuned_model.pth  fine-tuned_model_best.pth  trained_byol_model.pth
